kubernetes/nginx-deployment.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: flask-app-deployment
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.2
          ports:
            - containerPort: 80
