kubernetes/redis.yaml
apiVersion: v1
kind: Pod
metadata:
  name: flask-app-redis
spec:
  containers:
  - name: flask-app
    image: redis
    volumeMounts:
    - name: task-pv-storage
      mountPath: /data/redis
  volumes:
  - name: task-pv-storage
    persistentVolumeClaim:
    claimName: task-pv-claim
