kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port : 5000
    targetPort: 80
    nodePort: 31080
