kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app-ingress
spec:
  rules:
  - host: flask-app.info
    http:
      paths:
      - path: /flask-app
      pathType: Prefix
      backend:
        service:
          name: flask-app-service
          port:
            number: 8080
